--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+
+	<nav> 
+		<ul>
+			<li><a href=""> Producten </a></li>
+			<li><a href=""> Recepten </a></li>
+			<li><a href=""> Ons verhaal </a></li>
+			<li><a href=""> Purpose </a></li>
+		</ul>
+	</nav>
 </head>
 
 <body>
