--- a/index.html
+++ b/index.html
@@ -12,17 +12,33 @@
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 
 	<nav> 
+	        <a href=#><img src=# alt= Maltesers logo></a>
+	</nav>
+
+	<nav> 
 		<ul>
-			<li><a href=""> Producten </a></li>
-			<li><a href=""> Recepten </a></li>
-			<li><a href=""> Ons verhaal </a></li>
-			<li><a href=""> Purpose </a></li>
+			<li><a href=#> Producten </a></li>
+			<li><a href=#> Recepten </a></li>
+			<li><a href=#> Ons verhaal </a></li>
+			<li><a href=#> Purpose </a></li>
 		</ul>
 	</nav>
 </head>
 
 <body>
-	<h1>Howdy FED2425</h1>
+	/* Hulp nodig in de Main bij SVG*/
+	
+<main>
+	<h2>Producten</h2>
+	<p>Luchtig genieten</p>
+	<svg></svg> 
+
+	<select name=# id=#>
+		<option value="">Filteren op</option>
+		<option value=Maltesers>Maltesers</option>
+	</select>
+</main>
+	
 
 	<script defer src="scripts/script.js"></script>
 </body>
