--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 
 	<nav> 
-	        <a href=#><img src=# alt= Maltesers logo></a>
+	        <a href=#><img src=# alt='Maltesers' logo></a>
 	</nav>
 
 	<nav> 
@@ -24,21 +24,86 @@
 		</ul>
 	</nav>
 </head>
+	<body>
+		<main>
+			<h2>Producten</h2>
+			<p>Luchtig genieten</p>
+			<svg></svg> /*Hulp nodig*/
+			
+			<select name=# id=#> /*Hulp nodig*/
+			<option value="">Filteren op</option>
+			<option value=Maltesers>Maltesers</option>
+			</select>
+			
+			<h3>Alle producten</h3>
+			<svg></svg>
+			
+			<section>
+				<img src=# alt='Een zak van 175 gram maltesers melkchocolade'>
+				<p>Maltesers melkchocolade 175g</p>
+				<a href=#>Details</a>
+				<button href=#>Waar te koop</button>
+			</section>
+			
+			<section>
+				<img src=# alt='Een zak van 273 gram maltesers melkchocolade'>
+				<p>Maltesers melkchocolade 273g</p>
+				<a href=#>Details</a>
+				<button href=#>Waar te koop</button>
+			</section>
+			
+			<section>
+				<img src=# alt='Een portieverpakking maltesers van 37 gram'>
+				<p>Maltesers melkchocolade portieverpakking 37g</p>
+				<a href=#>Details</a>
+				<button href=#>Waar te koop</button>
+			</section>
+			
+			<section>
+				<img src=# alt='Een zak van 102 gram maltesers melkchocolade'>
+				<p>Maltesers melkchocolade 102g</p>
+				<a href=#>Details</a>
+				<button href=#>Waar te koop</button>
+			</section>
+			
+			<section>
+				<img src=# alt='Een zak van 135 gram maltesers melkchocolade'>
+				<p>Maltesers melkchocolade 135g</p>
+				<a href=#>Details</a>
+				<button href=#>Waar te koop</button>
+			</section>
+			
+			<section>
+				<img src=# alt='Een maxipack van 300 gram maltesers melkchocolade'>
+				<p>Maltesers Maxi Pack 300g</p>
+				<a href=#>Details</a>
+				<button href=#>Waar te koop</button>
+			</section>
+			
+			<section>
+				<img src=# alt='Een maltesers teasers melkchocolade reep van 35 gram'>
+				<p>Maltesers Teasers melkchocolade reep 35g</p>
+				<a href=#>Details</a>
+				<button href=#>Waar te koop</button>
+			</section>
+		</main>
+		
+		<footer>
+			<a href=#><img src=# alt='Maltesers logo'></a>
 
-<body>
-	/* Hulp nodig in de Main bij SVG*/
-	
-<main>
-	<h2>Producten</h2>
-	<p>Luchtig genieten</p>
-	<svg></svg> 
+			<ul>
+				<a href=#>Contact en hulp</a>
+				<a href=#>Ons verhaal</a>
+				<a href=#>Waar te koop</a>
+			</ul>
 
-	<select name=# id=#>
-		<option value="">Filteren op</option>
-		<option value=Maltesers>Maltesers</option>
-	</select>
-</main>
-	
+			<div>
+				<p>Volg ons op</p>
+				
+				<a href=#><img src=# alt='Facebook logo'></a>
+				<a href=#><img src=# alt='Youtube logo'></a>
+			</div>
+		</footer>
 
 	<script defer src="scripts/script.js"></script>
 </body>
