--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<nav name="menu"> 
 			<ul>
-				<li><a href='producten.html'> Producten </a></li>
+				<li><a href='index.html'> Producten </a></li>
 				<li><a href='https://www.maltesers.nl/recipes'> Recepten </a></li>
 				<li><a href='overons.html'> Ons verhaal </a></li>
 				<li><a href='https://www.maltesers.nl/acties'> Purpose </a></li>
